--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcana/auth": "^1.0.4",
+    "@arcana/auth-react": "^0.0.3",
+    "@types/express": "^4.17.17",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.3",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
